WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82177
Triggers assertion if dragging from outside of <meter> in a shadow tree to inside of it
https://bugs.webkit.org/show_bug.cgi?id=82177
Summary
Triggers assertion if dragging from outside of <meter> in a shadow tree to in...
Shinya Kawanaka
Reported
2012-03-26 02:16:35 PDT
Attached the repro. VisibleSelection::adjustSelectionToAvoidCrossingShadowBoundaries seems wrong. Since there is no last position in <meter>, we cannot take lastPositionInNode(<meter>). Maybe we should use lastPositionInOrAfterNode() instead.
Attachments
Repro
(1005 bytes, text/html)
2012-03-26 02:24 PDT
,
Shinya Kawanaka
no flags
Details
Patch
(4.83 KB, patch)
2012-03-26 02:38 PDT
,
Shinya Kawanaka
dglazkov
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-03-26 02:24:33 PDT
Created
attachment 133753
[details]
Repro
Shinya Kawanaka
Comment 2
2012-03-26 02:38:44 PDT
Created
attachment 133755
[details]
Patch
Shinya Kawanaka
Comment 3
2012-03-26 19:43:16 PDT
Committed
r112197
: <
http://trac.webkit.org/changeset/112197
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug